created basic layout

--- a/Web App/index.html
+++ b/Web App/index.html
@@ -1,1 +1,42 @@
-empty file
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CF Rating Predictor</title>
+</head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="undefined" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.esm.min.js" integrity="undefined" crossorigin="anonymous"></script>
+
+<body>
+    <form>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Enter Ratings</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Max Rating">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Current Rating">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Enter deltas from past 3 rounds</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Delta 1">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Delta 2">
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Delta 3">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Enter your lucky number</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Lucky Number">
+        </div>
+        
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</body>
+</html>
