fixed: ids of input

--- a/Web App/index.html
+++ b/Web App/index.html
@@ -14,29 +14,27 @@
 <body>
     <form>
         <div class="form-group">
-            <label for="exampleInputEmail1">Enter Ratings</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Max Rating">
+            <label for="max-rating">Enter Ratings</label>
+            <input type="text" class="form-control" id="max-rating" placeholder="Max Rating">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Current Rating">
+            <input type="text" class="form-control" id="curr-rating" placeholder="Current Rating">
         </div>
         <div class="form-group">
-            <label for="exampleInputEmail1">Enter deltas from past 3 rounds</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Delta 1">
+            <label for="delta-1">Enter deltas from past 3 rounds</label>
+            <input type="text" class="form-control" id="delta-1" placeholder="Delta 1">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Delta 2">
+            <input type="text" class="form-control" id="delta-2" placeholder="Delta 2">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Delta 3">
+            <input type="text" class="form-control" id="delta-3" placeholder="Delta 3">
         </div>
         <div class="form-group">
-            <label for="exampleInputEmail1">Enter your lucky number</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Lucky Number">
+            <label for="lucky-number">Enter your lucky number</label>
+            <input type="text" class="form-control" id="lucky-number" placeholder="Lucky Number">
         </div>
-        
-        
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Predict Ratings</button>
     </form>
 </body>
 </html>
