--- a/Web App/index.html
+++ b/Web App/index.html
@@ -5,36 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CF Rating Predictor</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="undefined" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.esm.min.js" integrity="undefined" crossorigin="anonymous"></script> -->
+    <script>
+        function PredictRatings() {
+            var maxRating = document.getElementById("max-rating").value;
+            document.getElementById("predicted-ratings").innerHTML = maxRating;// "ok tested";
+        }
+    </script>
 </head>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="undefined" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.esm.min.js" integrity="undefined" crossorigin="anonymous"></script>
-
+    
 <body>
-    <form>
-        <div class="form-group">
-            <label for="max-rating">Enter Ratings</label>
-            <input type="text" class="form-control" id="max-rating" placeholder="Max Rating">
+    <div class="row">
+        <div class="col-md-5 mx-auto">
+            <form>
+                <div class="form-group">
+                    <label for="max-rating">Enter Ratings</label>
+                    <input type="text" class="form-control" id="max-rating" placeholder="Max Rating">
+                    <input type="text" class="form-control" id="curr-rating" placeholder="Current Rating">
+                </div>
+                <div class="form-group">
+                    <label for="delta-1">Enter deltas from past 3 rounds</label>
+                    <input type="text" class="form-control" id="delta-1" placeholder="Delta 1">
+                    <input type="text" class="form-control" id="delta-2" placeholder="Delta 2">
+                    <input type="text" class="form-control" id="delta-3" placeholder="Delta 3">
+                </div>
+                <div class="form-group">
+                    <label for="lucky-number">Enter your lucky number</label>
+                    <input type="text" class="form-control" id="lucky-number" placeholder="Lucky Number">
+                </div>
+                <button type="submit" class="btn btn-primary" onclick="PredictRatings()">Predict Ratings</button>
+                <div id = "predicted-ratings">
+        
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <input type="text" class="form-control" id="curr-rating" placeholder="Current Rating">
-        </div>
-        <div class="form-group">
-            <label for="delta-1">Enter deltas from past 3 rounds</label>
-            <input type="text" class="form-control" id="delta-1" placeholder="Delta 1">
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" id="delta-2" placeholder="Delta 2">
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" id="delta-3" placeholder="Delta 3">
-        </div>
-        <div class="form-group">
-            <label for="lucky-number">Enter your lucky number</label>
-            <input type="text" class="form-control" id="lucky-number" placeholder="Lucky Number">
-        </div>
-        <button type="submit" class="btn btn-primary">Predict Ratings</button>
-    </form>
+    </div>
 </body>
 </html>
