fixed: pupil & newbie colors

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -183,10 +183,10 @@
 
     const rating_color = [
         "white;",
-        "#078007;", "#77ddbb;", "#03a8b9;",
+        "#80808f;", "#078007;", "#03a8b9;",
         "#0700ff;", "#aa00ac;", "#ff8c17;",
         "#ff8c07;", "#fd0700;", "#ff000f;", "black;\">L</span><span class = \"shadow-only\" style=\"color:red;",
-        "transparent;\" class = \"rainbow-text\""
+        "#black;"
     ]
 
 
