changed website name

--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -106,7 +106,7 @@
                 0-1.5-.672-1.5-1.5v-15c0-.828.673-1.5 1.5-1.5h3zm9 7.5A1.5 1.5 0 0 1 24 12v7.5a1.5 1.5 0 0 1-1.5 
                 1.5h-3a1.5 1.5 0 0 1-1.5-1.5V12a1.5 1.5 0 0 1 1.5-1.5h3z" fill="blue"></path>
             </svg> -->
-            CodeForces Future Rating Predictor 
+            &nbsp;CF FRPredict
         </a>
     </nav>
     
